src/styles.css
.App {
  font-family: sans-serif;
  text-align: center;
}

body {
  margin: 0;
  padding: 0;
  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen', 'Ubuntu', 'Cantarell', 'Fira Sans',
    'Droid Sans', 'Helvetica Neue', sans-serif;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  box-sizing: border-box;
  /* overflow: hidden; */
}

*,
*:before,
*:after {
  box-sizing: inherit;
}

/* ---Nav Bar CSS--- */
.sticky-nav {
  position: sticky;
  top: 0;
  width: 100%;
  z-index: 10;
  border-bottom: 1px solid rgb(130, 130, 130);
  color: black;
}

.btn {
  background-color: #967bb6;
  color: white;
}

.logo {
  width: 1.5%;
}

.logo-text {
  font-family: 'Patua One', cursive;
  margin-left: 2px;
  font-size: 26px;
  color: #967bb6;
  margin-right: 0;
}

.logo-text2 {
  font-family: 'Patua One', cursive;
  margin-left: 2px;
  font-size: 26px;
  color: #939393;
  margin: 0;
  padding: 0;
}

.footer {
  position: sticky;
  background-color: #f5f5f5;
  bottom: 0;
  width: 100%;
  z-index: 10;
  border-top: 1px solid rgb(218, 218, 218);
}

/* .footer-container {
  display: flex;
  width: 100%;
  align-items: center;
  justify-content: right;
} */

/* ---Nav Bar CSS--- END*/

/* D3/Visgraph Div */
.graph-div {
  display: flex;
  align-items: center;
  justify-content: space-evenly;
  height: 90vh;
  padding: 1rem;
  background-color: #f5f5f5;
}

.empty-graph {
  display: flex;
  justify-content: center;
  align-items: center;
  width: 100%;
  height: 100%;
  border: 1px solid black;
}

.graph {
  border: 1px solid black;
}

/* ---Codebox CSS--- */
.code-box {
  display: inline-flexbox;
  width: 100%;
  background-color: black;
}

.CodeMirror-hscrollbar {
  overflow: hidden;
}

.CodeMirror {
  width: 100%;
  height: 70rem;
  overflow: hidden;
}

/* ----POPUP LINK BOX---- */
.modal-cover {
  position: fixed;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  z-index: 10;
  transform: translateZ(0);
  background-color: rgba(0, 0, 0, 0.5);
}

.modal-area {
  position: fixed;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  padding: 5em 3em 3em 3em;
  background-color: #ffffff;
  box-shadow: 0 0 10px 3px rgba(0, 0, 0, 0.1);
  overflow-y: auto;
  -webkit-overflow-scrolling: touch;
  border-radius: 3%;
}

@media screen and (min-width: 500px) {
  .modal-area {
    left: 50%;
    top: 50%;
    height: auto;
    transform: translate(-50%, -50%);
    max-width: 55em;
    max-height: calc(100% - 1em);
  }
}

._modal-close {
  position: absolute;
  top: 0;
  right: 0;
  padding: 0.5em;
  line-height: 1;
  background: #f6f6f7;
  border: 0;
  box-shadow: 0;
  cursor: pointer;
}

._modal-close-icon {
  width: 25px;
  height: 25px;
  fill: transparent;
  stroke: black;
  stroke-linecap: round;
  stroke-width: 2;
}

.modal-body {
  padding-top: 0.25em;
}

._hide-visual {
  border: 0 !important;
  clip: rect(0 0 0 0) !important;
  height: 1px !important;
  margin: -1px !important;
  overflow: hidden !important;
  padding: 0 !important;
  position: absolute !important;
  width: 1px !important;
  white-space: nowrap !important;
}

.scroll-lock {
  overflow: hidden;
  /* margin-right: 17px; */
}

/* ----POPUP LINK BOX---- END*/

/* ---SIDEBAR---- */

.sidebar {
  height: 100%;
  width: 0;
  position: fixed;
  z-index: 1;
  top: 0;
  left: 0;
  background-color: #111;
  overflow-x: hidden;
  transition: 0.5s;
  padding-top: 60px;
}

.sidebar a {
  padding: 8px 8px 8px 32px;
  text-decoration: none;
  font-size: 25px;
  color: #818181;
  display: block;
  transition: 0.3s;
}

.sidebar a:hover {
  color: #f1f1f1;
}

.sidebar .closebtn {
  position: absolute;
  top: 0;
  right: 25px;
  font-size: 36px;
  margin-left: 50px;
}

.openbtn {
  font-size: 20px;
  cursor: pointer;
  color: black;
  padding: 10px 15px;
  border: none;
  margin: auto;
  /* margin-top: 20px; */
}

.openbtn:hover {
  background-color: #444;
}

#main {
  transition: margin-left 0.5s;
  margin: 0;
}

/* On smaller screens, where height is less than 450px, change the style of the sidenav (less padding and a smaller font size) */
@media screen and (max-height: 450px) {
  .sidebar {
    padding-top: 15px;
  }
  .sidebar a {
    font-size: 18px;
  }
}

